// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RouteTreeBuilder routeTreeFromPaths Should create a route tree 1`] = `
Array [
  Object {
    "component": "testPage",
    "path": "/tag",
  },
  Object {
    "component": "testPage",
    "path": "/beat",
    "routes": Array [
      Object {
        "component": "testPage",
        "path": "/beat/detail",
      },
      Object {
        "component": "testPage",
        "path": "/beat/tags",
      },
    ],
  },
  Object {
    "component": "testPage",
    "path": "/error/enforce_security",
  },
  Object {
    "component": "testPage",
    "path": "/error/invalid_license",
  },
  Object {
    "component": "testPage",
    "path": "/error/no_access",
  },
  Object {
    "component": "testPage",
    "path": "/overview",
    "routes": Array [
      Object {
        "component": "testPage",
        "path": "/overview/enrolled_beats",
      },
      Object {
        "component": "testPage",
        "path": "/overview/tag_configurations",
      },
    ],
  },
  Object {
    "component": "testPage",
    "path": "/walkthrough/initial",
    "routes": Array [
      Object {
        "component": "testPage",
        "path": "/walkthrough/initial/beat",
      },
      Object {
        "component": "testPage",
        "path": "/walkthrough/initial/finish",
      },
      Object {
        "component": "testPage",
        "path": "/walkthrough/initial/tag",
      },
    ],
  },
  Object {
    "component": "testPage",
    "path": "*",
  },
]
`;

exports[`RouteTreeBuilder routeTreeFromPaths Should create a route tree, with top level route having params 1`] = `
Array [
  Object {
    "component": "testPage",
    "path": "/tag/:action/:tagid?",
  },
  Object {
    "component": "testPage",
    "path": "/beat",
    "routes": Array [
      Object {
        "component": "testPage",
        "path": "/beat/detail",
      },
      Object {
        "component": "testPage",
        "path": "/beat/tags",
      },
    ],
  },
  Object {
    "component": "testPage",
    "path": "/error/enforce_security",
  },
  Object {
    "component": "testPage",
    "path": "/error/invalid_license",
  },
  Object {
    "component": "testPage",
    "path": "/error/no_access",
  },
  Object {
    "component": "testPage",
    "path": "/overview",
    "routes": Array [
      Object {
        "component": "testPage",
        "path": "/overview/enrolled_beats",
      },
      Object {
        "component": "testPage",
        "path": "/overview/tag_configurations",
      },
    ],
  },
  Object {
    "component": "testPage",
    "path": "/walkthrough/initial",
    "routes": Array [
      Object {
        "component": "testPage",
        "path": "/walkthrough/initial/beat",
      },
      Object {
        "component": "testPage",
        "path": "/walkthrough/initial/finish",
      },
      Object {
        "component": "testPage",
        "path": "/walkthrough/initial/tag",
      },
    ],
  },
  Object {
    "component": "testPage",
    "path": "*",
  },
]
`;
